Fix input style on ios

--- a/src/input.css
+++ b/src/input.css
@@ -179,7 +179,7 @@ p {
 }
 
 h1 {
-    @apply text-4xl md:text-5xl font-bold py-10;
+    @apply text-4xl md:text-5xl font-bold py-10 !text-left;
 }
 
 h2 {
